<resources>
    <string name="app_name">No Waste</string>
    <string name="title_home">Главная</string>
    <string name="title_profile">Профиль</string>
    <string name="title_scanner">Сканер</string>
    <string name="button_label_scan">Сканировать</string>
    <string name="add_new_point">Добавить новую точку</string>
    <string name="address">Адрес</string>
    <string name="address_example">Москва, Рязанский проспект, 2Б</string>
    <string name="point_name">Название</string>
    <string name="enter_text_hint">Введите текст...</string>
    <string name="email">Email</string>
    <string name="city_name">Москва</string>
    <string name="sign_up">Далее</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter_email">Введите email</string>
    <string name="enter_password">Введите пароль</string>
    <string name="title_init">Привет!</string>
    <string name="title_user_exist">Войти</string>
    <string name="title_user_new">Зарегистрироваться</string>
    <string name="button_init">Далее</string>
    <string name="button_user_exist">Войти</string>
    <string name="button_user_new">Зарегистрироваться</string>
    <string name="save">Сохранить</string>
    <string name="searchbar_hint">Поиск...</string>
    <string name="ok">OK</string>
    <string name="error_message">Этот продукт не найден в базе данных</string>
    <string name="edit_profile">Изменить профиль</string>
    <string name="logout">Выйти</string>
    <string name="search_title">Поиск...</string>
    <string name="add_photo_button">Добавить фото</string>
    <string name="edit">Изменить</string>
    <string name="name">Имя</string>
</resources>