<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_new_point_dialog_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_fragment_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/add_new_point"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="#3D3C3C"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_location"
        app:layout_constraintStart_toEndOf="@id/title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/address"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#757171"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        tools:text="@string/address_example"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#1E1E1E"
        app:layout_constraintStart_toStartOf="@id/title_address"
        app:layout_constraintTop_toBottomOf="@id/title_address" />

    <TextView
        android:id="@+id/point_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/point_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#757171"
        app:layout_constraintStart_toStartOf="@id/address"
        app:layout_constraintTop_toBottomOf="@id/address" />

    <EditText
        android:id="@+id/et_point_name"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="3dp"
        android:inputType="text"
        android:hint="@string/enter_text_hint"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#1E1E1E"
        app:layout_constraintStart_toStartOf="@id/point_name"
        app:layout_constraintTop_toBottomOf="@id/point_name" />

    <ImageButton
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:text="@string/save"
        android:textColor="#1E1E1E"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_point_name" />

</androidx.constraintlayout.widget.ConstraintLayout>