<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_profile_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/background_white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="32dp">

    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="70dp"
        tools:src="@tools:sample/avatars" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/add_photo_button"
        android:gravity="center"
        android:textColor="@color/black"
        android:background="@drawable/button"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:background="@drawable/rectangle_edit_text"
        android:gravity="center_vertical"
        android:hint="@string/enter_name"
        android:inputType="textEmailAddress"
        android:padding="7dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:background="@drawable/rectangle_edit_text"
        android:gravity="center_vertical"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="7dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="70dp"
        android:background="@drawable/button_rounded_corners"
        android:gravity="center"
        android:text="@string/save"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="bold" />

</LinearLayout>