<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_add_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/add_new_point"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="#3D3C3C"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/ic_location"
        app:layout_constraintStart_toEndOf="@id/tv_add_point"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/address"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#757171"
        app:layout_constraintStart_toStartOf="@id/tv_add_point"
        app:layout_constraintTop_toBottomOf="@id/tv_add_point" />

    <TextView
        android:id="@+id/tv_address_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/address_example"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#1E1E1E"
        app:layout_constraintStart_toStartOf="@id/tv_address"
        app:layout_constraintTop_toBottomOf="@id/tv_address" />

    <TextView
        android:id="@+id/tv_point_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/point_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#757171"
        app:layout_constraintStart_toStartOf="@id/tv_address_example"
        app:layout_constraintTop_toBottomOf="@id/tv_address_example" />

    <EditText
        android:id="@+id/tv_point_name_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:hint="@string/enter_text_hint"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#1E1E1E"
        app:layout_constraintStart_toStartOf="@id/tv_point_name"
        app:layout_constraintTop_toBottomOf="@id/tv_point_name" />

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>