<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_new_point_dialog_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_fragment_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        tools:text="Точка 1"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="#3D3C3C"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_location"
        app:layout_constraintStart_toEndOf="@id/name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/address"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#757171"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        tools:text="@string/address_example"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#1E1E1E"
        app:layout_constraintStart_toStartOf="@id/title_address"
        app:layout_constraintTop_toBottomOf="@id/title_address" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirm"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/button_rounded_corners"
        android:text="@string/ok"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address" />

</androidx.constraintlayout.widget.ConstraintLayout>